--- a/style.css
+++ b/style.css
@@ -811,4 +811,73 @@ footer p {
   content: "aux légumes";
 }
 
+@keyframes card-animation {
+  0% {
+    transform: translateY(0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(-10%);
+    opacity: 1;
+  }
+}
+.cards-entree-animation-1 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+}
+
+.cards-entree-animation-2 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 0.4s;
+}
+
+.cards-entree-animation-3 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 0.8s;
+}
+
+.cards-entree-animation-4 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 1.2s;
+}
+
+.cards-plat-animation-1 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 1.6s;
+}
+
+.cards-plat-animation-2 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 2s;
+}
+
+.cards-plat-animation-3 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 2.4s;
+}
+
+.cards-dessert-animation-1 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 2.8s;
+}
+
+.cards-dessert-animation-2 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 3.2s;
+}
+
+.cards-dessert-animation-3 {
+  animation: card-animation 1s ease-in-out forwards;
+  opacity: 0;
+  animation-delay: 3.6s;
+}
+
 /*# sourceMappingURL=style.css.map */
