correction code animation ...

--- a/sass/keyframes/_keyframes-heart-animation.scss
+++ b/sass/keyframes/_keyframes-heart-animation.scss
@@ -5,10 +5,10 @@ $purple: #9356DC;
     opacity: 0;
 
     &:hover {
-        animation: animation-heart 0.3s ease-in-out forwards;
+        animation: animation-heart 0.5s ease-in-out forwards;
         opacity: 1;
         color: $pink;
-        background: -webkit-linear-gradient($pink, $purple);
+        background: linear-gradient($pink, $purple);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
