construction du loader

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,4 @@
 @import "keyframes/_keyframes-hover-change-content.scss";
 @import "keyframes/_keyframes-apparition-cards.scss";
 @import "keyframes/_keyframes-heart-animation.scss";
+@import "keyframes/_keyframes-loading-spinner.scss";
