--- a/style.css
+++ b/style.css
@@ -497,4 +497,39 @@ footer p {
   -webkit-text-fill-color: transparent;
 }
 
+.loader-spinner::before {
+  content: "";
+  overflow: hidden;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 50%;
+  border: white solid 5px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  animation: rotate-spinner 3s linear infinite;
+}
+
+@keyframes rotate-spinner {
+  0% {
+    transform: rotate(0deg);
+    border-top: red solid 5px;
+  }
+  25% {
+    border-right: red solid 5px;
+  }
+  50% {
+    border-bottom: red solid 5px;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-left: red solid 5px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
