--- a/style.css
+++ b/style.css
@@ -497,20 +497,26 @@ footer p {
   -webkit-text-fill-color: transparent;
 }
 
-@keyframes rotate-spinner {
+@keyframes circle-ohmyfood-scale {
   0% {
-    transform: rotate(0deg);
-    border-top: red solid 5px;
-  }
-  25% {
-    border-right: red solid 5px;
+    transform: scale(0);
+    color: #9356DC;
   }
   50% {
-    border-bottom: red solid 5px;
+    transform: scale(2.5);
+    color: #FF79DA;
+  }
+  75% {
+    transform: scale(2.5);
+    color: #9356DC;
+  }
+  80% {
+    opacity: 1;
+    color: #FF79DA;
   }
   100% {
-    transform: rotate(360deg);
-    border-left: red solid 5px;
+    opacity: 0;
+    color: #9356DC;
   }
 }
 @keyframes visibility-hid {
@@ -522,29 +528,62 @@ footer p {
   }
 }
 body {
-  animation: visibility-hid 3s linear;
+  animation: visibility-hid 4.5s linear;
 }
 
-.loader-spinner::before {
-  content: "";
-  overflow: hidden;
-  position: absolute;
+#visible {
+  visibility: visible;
+}
+
+.loader-ohmyfood {
   width: 100px;
   height: 100px;
-  background-color: transparent;
-  border-radius: 50%;
-  border: transparent solid 5px;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  animation: rotate-spinner 3s linear backwards;
 }
 
-#visible {
-  visibility: visible;
+.letter-ohmyfood {
+  font-family: "Shrikhand", "Helvetica", "sans-serif";
+  font-size: 16px;
+  width: 40px;
+  height: 40px;
+  margin-right: 16px;
+  border-radius: 100%;
+  animation: circle-ohmyfood-scale 2s ease-in-out both;
+  animation-iteration-count: 2;
+}
+.letter-ohmyfood-1 {
+  animation-delay: 0.1s;
+}
+.letter-ohmyfood-2 {
+  animation-delay: 0.3s;
+}
+.letter-ohmyfood-3 {
+  animation-delay: 0.4s;
+  margin-left: 8px;
+}
+.letter-ohmyfood-4 {
+  animation-delay: 0.5s;
+  margin-left: 8px;
+}
+.letter-ohmyfood-5 {
+  animation-delay: 0.6s;
+}
+.letter-ohmyfood-6 {
+  animation-delay: 0.7s;
+}
+.letter-ohmyfood-7 {
+  animation-delay: 0.8s;
+}
+.letter-ohmyfood-8 {
+  animation-delay: 0.9s;
 }
 
 /*# sourceMappingURL=style.css.map */
