--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,32 @@
+// VARIABLES
+
 $pink: #FF79DA;
 $purple: #9356DC;
+
+// MIXINS 
+
+@mixin button-responsive() {
+    .explication-reservation-menu {
+        background-color: transparent;
+    }
+    .button-primary-responsive {
+        margin: 0px;
+        position: absolute;
+        left: 256px;
+        top: 1px;
+        box-shadow: none;
+        border-radius: 0px 16px 16px 0px;
+        padding: 18px 10px;
+        font-size: 14px;
+
+        &:hover {
+           background: linear-gradient(lighten($pink, 5%), lighten($purple, 5%));
+           box-shadow: none;
+        }
+    }
+}
+
+// CSS
 
 .button-primary {
     border-style: none;
@@ -27,4 +54,19 @@ $purple: #9356DC;
 
 .button-commander {
     padding: 16px 58px;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+
+    @include button-responsive();
+}
+
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+    
+    @include button-responsive();
+}
+
+@media screen and (min-width: 1441px) and (max-width: 2560px) {
+    
+    @include button-responsive();
 }
