--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,13 @@
+// MIXINS
+
+@mixin footer-responsive() {
+    .responsive-footer {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+
 footer {
     background-color: #353535;
     color: white;
@@ -29,4 +39,14 @@ footer {
 
 #lien-contact {
     color: white;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+
+    @include footer-responsive();
+}
+
+@media screen and (min-width: 1441px) and (max-width: 2560px) {
+
+    @include footer-responsive();
 }
