--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,3 +1,48 @@
+// VARIABLES 
+
+$pink: #FF79DA;
+$purple: #9356DC;
+
+// MIXINS 
+
+@mixin form-responsive() {
+    form {
+        display: flex;
+        height: 20px;
+        margin-top: 30px;
+        position: relative;
+    }
+
+    .responsive-form-titres {
+        display: block;
+        margin-left: 16px;
+    }
+
+    .responsive-titres {
+        display: none;
+    }
+
+    .map-input-localisation {
+        height: 52px;
+        width: 300px;
+        margin-left: 16px;
+        justify-content: left;
+        border-radius: 16px 0px 0px 16px;
+
+        i {
+            background: linear-gradient($purple, $pink);
+            color: white;
+            height: 52px;
+            width: 52px;
+            line-height: 52px;
+            text-align: center;
+            border-radius: 16px 0px 0px 16px;
+        }
+    }
+}
+
+// CSS
+
 .map-input-localisation {
     display: flex;
     justify-content: center;
@@ -34,4 +79,31 @@ input {
     h3 {
        font-weight: lighter;
     }
+}
+
+.responsive-form-titres {
+    display: none;
+}
+
+// RESPONSIVE 
+
+// TABLETTE
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+
+    @include form-responsive();
+} 
+
+// DESKTOP
+
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+
+    @include form-responsive();
+}
+
+// GRAND ECRAN 
+
+@media screen and (min-width: 1441px) and (max-width: 2560px) {
+
+    @include form-responsive();
 }
