--- a/sass/components/_main-pages-menu.scss
+++ b/sass/components/_main-pages-menu.scss
@@ -23,3 +23,10 @@
         font-size: 28px;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1440px) {
+
+    .img-francaise {
+        height: 98%;
+    }
+}
