--- a/sass/components/_main-pages-menu.scss
+++ b/sass/components/_main-pages-menu.scss
@@ -1,4 +1,4 @@
-.img-francaise {
+.img-main {
     object-fit: cover;
     width: 100%;
     height: 256px;
@@ -24,9 +24,23 @@
     }
 }
 
+// DESKTOP ET GRAND ECRAN
+
 @media screen and (min-width: 769px) and (max-width: 1440px) {
 
-    .img-francaise {
+    .img-main{
         height: 98%;
+    }
+}
+
+@media screen and (min-width: 1441px) and (max-width: 2560px) {
+
+    .img-main {
+        height: 100%;
+    }
+
+    .img-responsive {
+        width: 1280px;
+        height: 999px;
     }
 }
