--- a/sass/keyframes/_keyframes-heart-animation.scss
+++ b/sass/keyframes/_keyframes-heart-animation.scss
@@ -9,7 +9,6 @@ $purple: #9356DC;
         opacity: 1;
         color: $pink;
         background: linear-gradient($pink, $purple);
-        transform-origin: bottom;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
@@ -17,12 +16,10 @@ $purple: #9356DC;
 
 @keyframes animation-heart {
     0% {
-        opacity: 0;
         transform: scale(0);
     }
     100% {
-        opacity: 1;
-        transform: scale(1.2, 1.1);
+        transform: scale(1.1);
     }
 }
 
